welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Int(210)
 required: Boolean
  if (190<=n<=210) {
              ^