welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if (190<=n<=210) {
    return true
  }
  return false
}